syntax = "proto3";

import "google/protobuf/empty.proto";

package guru.qa.grpc.rococo;

option java_multiple_files = true;
option java_package = "guru.qa.grpc.rococo.grpc";
option java_outer_classname = "RococoUserdataProto";

service RococoUserdataService {
  rpc GetUser(UserRequest) returns (UserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
}

message UserRequest {
  string username = 1;
}

message UserResponse {
  bytes id = 1;
  string username = 2;
  string firstname = 3;
  string lastname = 4;
  bytes avatar = 5;
}

message UpdateUserRequest {
  bytes id = 1;
  string username = 2;
  string firstname = 3;
  string lastname = 4;
  bytes avatar = 5;
}
